--- a/env.yml
+++ b/env.yml
@@ -6,7 +6,7 @@ channels:
 dependencies:
 - ase=3.22
 - autopep8
-- cudatoolkit=10.2
+- cudatoolkit=12.*
 - jupyterlab
 - matminer=0.7.3
 - matplotlib
@@ -16,7 +16,7 @@ dependencies:
 - ipywidgets
 - pylint
 - pymatgen=2020.12.31
-- python=3.8.*
+- python=3.11.*
 - pytorch-lightning=1.3.8
 - pytorch=1.8.1
 - seaborn
